--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   widgetbook: 2.0.5-beta
   auto_size_text: 3.0.0
+  animated_text_kit: ^4.2.1
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
